ops/op2/test_cases_fail/lifetimes.stderr
error: unused import: `std::future::Future`
 --> ../op2/test_cases_fail/lifetimes.rs:5:5
  |
5 | use std::future::Future;
  |     ^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> ../op2/test_cases_fail/lifetimes.rs:2:9
  |
2 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_imports)]` implied by `#[deny(warnings)]`

error[E0597]: `arg0` does not live long enough
  --> ../op2/test_cases_fail/lifetimes.rs:11:1
   |
11 | #[op2(fast)]
   | ^^^^^^^^^^^-
   | |          |
   | |          `arg0` dropped here while still borrowed
   | borrowed value does not live long enough
   | argument requires that `arg0` is borrowed for `'static`
   |
   = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0597]: `arg0_temp` does not live long enough
  --> ../op2/test_cases_fail/lifetimes.rs:14:1
   |
14 | #[op2(fast)]
   | ^^^^^^^^^^^-
   | |          |
   | |          `arg0_temp` dropped here while still borrowed
   | borrowed value does not live long enough
   | argument requires that `arg0_temp` is borrowed for `'static`
   |
   = note: this error originates in the attribute macro `op2` (in Nightly builds, run with -Z macro-backtrace for more info)
